fixes bubble around text being too large

--- a/src/styles/Message.scss
+++ b/src/styles/Message.scss
@@ -618,6 +618,7 @@
     }
 
     &-text-inner {
+      flex: initial;
       text-align: left;
       max-width: 460px;
 
